# Noxus

./: .dockerignore  .gitignore  Challenge Deployment Engineer.ipynb  MANIFEST.in  README.md  Technical Challenge - Lourenço.md  pyproject.toml
domain/: __init__.py  nodes.py  plugins.py
http_server/: __init__.py  plugin_loader.py  server.py
noxus/: __init__.py  nodes.py
noxus_cli/: __init__.py  cli.py  plugin.py  plugin_template.py.txt  plugin_template.yaml  runner_template.py.txt  utils.py
noxus_cli/commands/: build.py  init.py  serve.py
noxus_cli/nodes/: nodes.py
noxus_cli/templates/: Dockerfile.production.template  Dockerfile.template  deploy.bat.template  deploy.sh.template  docker-compose.standalone.template  plugin_template.py.txt  plugin_template.yaml  pyproject.toml.template  runner_template.py.txt
