[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noxus-cli"
version = "0.1.0"
description = "Basic Noxus CLI tool"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
noxus = "noxus_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["noxus_cli*"]
